--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
 
     <!-- Enhanced Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
-        <div class="container">
+        <div class="container" style="margin-left: 0;">
             <a class="navbar-brand" href="#">
                 <div class="logo-container">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
@@ -839,9 +839,6 @@
                             <li><a class="dropdown-item" href="#">Engineering Service in Pharma</a></li>
                             <li><a class="dropdown-item" href="#">Validations & Calibration Activities</a></li>
                         </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">CAREERS</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="contactDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -1175,7 +1172,7 @@
             </div>
             
             <div class="copyright">
-                <p>&copy; 2023 Accutek Solutions Laboratory. All Rights Reserved.</p>
+                <p>&copy; 2023 Accutek Solutions Laboratory. All Rights Reserved. Developed & Managed By <a href="https://www.youtube.com/@gm_03">Ganesh Mali (GM)</a> : +91-9021817579</p>
             </div>
         </div>
     </footer>
